--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,23 +7,5 @@ services:
     container_name: dental_app
     ports:
       - "9090:9090"
-    depends_on:
-      - db
     environment:
-      ConnectionStrings__DefaultConnection: "Host=db;Port=5432;Database=dental_db;Username=postgres;Password=yourpassword"
-
-  db:
-    image: postgres:latest
-    container_name: postgres_container
-    restart: always
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: yourpassword
-      POSTGRES_DB: dental_db
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-
-volumes:
-  postgres_data:
+      ConnectionStrings__DefaultConnection: "Host=ep-aged-dawn-a1b43ker-pooler.ap-southeast-1.aws.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_asjynoYCvM74;SSL Mode=Require;Trust Server Certificate=True"
