--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,5 @@ services:
     environment:
       ASPNETCORE_URLS: "http://0.0.0.0:80"
       ConnectionStrings__DefaultConnection: "Host=ep-aged-dawn-a1b43ker-pooler.ap-southeast-1.aws.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_asjynoYCvM74;SSL Mode=Require;Trust Server Certificate=True"
+    volumes:
+      - ./docker-data/images:/app/wwwroot/images
