--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,14 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Host=ep-aged-dawn-a1b43ker-pooler.ap-southeast-1.aws.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_asjynoYCvM74;SSL Mode=Require;Trust Server Certificate=True"
+  },
+  "EmailSettings": {
+    "Host": "smtp-relay.brevo.com",
+    "Port": 587,
+    "SenderEmail": "ddacsmilecraft@gmail.com",
+    "SenderName": "SmileCraft Dental",
+    "Username": "892368002@smtp-brevo.com",
+    "Password": "N18Pa0Y9UQqD4Zjt",
+    "EnableSsl": true
   }
 }
