--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=ep-aged-dawn-a1b43ker-pooler.ap-southeast-1.aws.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_asjynoYCvM74;SSL Mode=Require;Trust Server Certificate=True"
+    "DefaultConnection":"Host=cloudassignment-db.cexxy9vmcqhk.us-east-1.rds.amazonaws.com;Database=cloudassignmentdb;Username=postgres;Password=Admin123!"
   },
   "EmailSettings": {
     "Host": "smtp-relay.brevo.com",
