--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection":"Host=cloudassignment-db.cexxy9vmcqhk.us-east-1.rds.amazonaws.com;Database=cloudassignmentdb;Username=postgres;Password=Admin123!"
+    "DefaultConnection":"Host=cloudassignment-database.ctsm4oagnbds.us-east-1.rds.amazonaws.com;Database=cloudassignment-database;Username=postgres;Password=Admin123!"
   },
   "EmailSettings": {
     "Host": "smtp-relay.brevo.com",
